[gd_scene load_steps=4 format=3 uid="uid://bfv22rsmcqby0"]

[ext_resource type="Script" uid="uid://bm5ikfsvpglaq" path="res://Scenes/main_menu.gd" id="1_wugcc"]
[ext_resource type="Texture2D" uid="uid://co05qipl8sxwm" path="res://Assets/Image/Menu_scene.png" id="2_b7rmo"]
[ext_resource type="AudioStream" uid="uid://c0lv4uyu1vfao" path="res://Assets/Music and sound/Menu_Music.mp3" id="2_rmbjf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wugcc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 321.25)
scale = Vector2(0.748698, 0.632324)
texture = ExtResource("2_b7rmo")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TitleLabel" type="Label" parent="CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.8, 0.6, 0.2, 0.5)
theme_override_colors/font_outline_color = Color(0.2, 0.15, 0.1, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 56
text = "THE ABANDONED KNIGHT"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="CenterContainer/MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="ExitButton" type="Button" parent="CenterContainer/MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VolumeControl" type="VBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 10.0

[node name="VolumeValue" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/VolumeControl"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "10"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CONTROLS"
horizontal_alignment = 1

[node name="ControlsText" type="RichTextLabel" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[center]A / D - Move Left/Right
W - Jump
Hold SHIFT - Run
L - Dash
J - Attack 1
K - Attack 2[/center]"
fit_content = true
scroll_active = false

[node name="Spacer3" type="Control" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rmbjf")
volume_db = -10.0
autoplay = true
